Fixed alignment of character info fields and changed color scheme

--- a/src/styles.css
+++ b/src/styles.css
@@ -7,5 +7,3 @@
   height: 300px;
   width: 500px;
 }
-
-html,body {background: "#28527a"}
